{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 57,
  "lineage": "46b54d71-9291-2ce9-7137-e36d604101cb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_airflow_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-13T23:35:00.107-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-engineering-1312/global/firewalls/allow-airflow-ui",
            "log_config": [],
            "name": "allow-airflow-ui",
            "network": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/global/networks/retail-analytics-vpc",
            "priority": 1000,
            "project": "data-engineering-1312",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/global/firewalls/allow-airflow-ui",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "airflow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432",
                  "8080",
                  "5555"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-13T23:35:00.111-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-engineering-1312/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/global/networks/retail-analytics-vpc",
            "priority": 1000,
            "project": "data-engineering-1312",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "airflow_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250130",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/zones/us-central1-a/disks/airflow-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/data-engineering-1312/zones/us-central1-a/instances/airflow-server",
            "instance_id": "1208387106213416149",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "E3PIU5FCEhE=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update and install dependencies\napt-get update\napt-get install -y python3-pip postgresql-client\n\n# Install Docker\ncurl -fsSL https://get.docker.com -o get-docker.sh\nsh get-docker.sh\n\n# Install Docker Compose\ncurl -L \"https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose\nchmod +x /usr/local/bin/docker-compose\n\n# # Clone your project repository\n# git [...]
            "name": "airflow-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.45.162.191",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/global/networks/retail-analytics-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/regions/us-central1/subnetworks/retail-analytics-subnet",
                "subnetwork_project": "data-engineering-1312"
              }
            ],
            "project": "data-engineering-1312",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/zones/us-central1-a/instances/airflow-server",
            "service_account": [
              {
                "email": "airflow-service-account@data-engineering-1312.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "airflow"
            ],
            "tags_fingerprint": "stn4D_lmL8U=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_service_account.airflow_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/data-engineering-1312/global/networks/retail-analytics-vpc",
            "mtu": 0,
            "name": "retail-analytics-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "data-engineering-1312",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/global/networks/retail-analytics-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-13T23:35:00.417-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/data-engineering-1312/regions/us-central1/subnetworks/retail-analytics-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "retail-analytics-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/global/networks/retail-analytics-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "data-engineering-1312",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-engineering-1312/regions/us-central1/subnetworks/retail-analytics-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}